fix: segment-timeline-placeholder margin is incorrect, causing layout shifts

--- a/meteor/client/styles/rundownView.scss
+++ b/meteor/client/styles/rundownView.scss
@@ -78,6 +78,9 @@ $segment-layer-separator-color: transparentize(#000, 0.5);
 	border-radius: $segment-border-radius;
 	overflow: hidden;
 
+	margin: $segment-margin-y $segment-margin-x;
+	width: auto;
+
 	&::before {
 		content: ' ';
 		display: block;
@@ -428,11 +431,6 @@ body.no-overflow {
 // }
 .header.rundown.active.rehearsal .first-row {
 	background-color: #660;
-}
-
-.segment-timeline-placeholder {
-	margin: 1.5em;
-	width: auto;
 }
 
 svg.icon {
